# nvi

./: .gitignore  .tenx.ron  Cargo.toml  README.md  TODO.md
crates/macro-types/: Cargo.toml
crates/macro-types/src/: lib.rs
crates/nvi/: Cargo.toml
crates/nvi-derive/: Cargo.toml
crates/nvi-derive/src/: lib.rs
crates/nvi-derive/tests/: derive.rs
crates/nvi-macros/: Cargo.toml
crates/nvi-macros/src/: lib.rs
crates/nvi-macros/tests/: derive.rs
crates/nvi-rpc/: Cargo.toml  README.md  err
crates/nvi-rpc/benches/: rpc_benchmarks.rs
crates/nvi-rpc/examples/: simple_client.rs  simple_server.rs
crates/nvi-rpc/src/: connection.rs  endpoint.rs  lib.rs  transport.rs
crates/nvi-rpc/tests/: pingpong.rs  simple.rs
crates/nvi-rpc2/: Cargo.toml
crates/nvi-rpc2/benches/: rpc_benchmarks.rs
crates/nvi-rpc2/examples/: simple_client.rs  simple_server.rs
crates/nvi-rpc2/src/: connection.rs  error.rs  lib.rs  message.rs  transport.rs
crates/nvi-rpc2/tests/: pingpong.rs  simple.rs
crates/nvi/src/: api.rs  client.rs  cmd.rs  connect.rs  demo.rs  diagnostics.rs  docs.rs  error.rs  highlights.rs  input.rs  lib.rs  lua.rs  message.rs  nvim_api.rs  opts.rs  process.rs  rpc.rs  run.rs  service.rs  test.rs  types.rs
crates/nvi/src/nvim/: api.rs  diagnostics.rs  mod.rs  opts.rs  types.rs
crates/nvi/src/ui/: input.rs  mod.rs  pane.rs  win.rs
crates/nvic/: Cargo.toml
crates/nvic/src/: api.rs  main.rs  overrides.rs  protoc.rs  run.rs
crates/protoc/: Cargo.toml
crates/protoc/src/: api.rs  docs.rs  dump.rs  main.rs  overrides.rs  protoc.rs
crates/serde-rmpv/: Cargo.toml
crates/serde-rmpv/src/: de.rs  error.rs  ser.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
scripts/: generate_docs  rebuild_proto  update_docs
tests/: Cargo.toml
tests/src/: client.rs  derives.rs  lib.rs  nvitest.rs
xtask/: Cargo.toml
xtask/src/: error.rs  main.rs
