[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
nvi = { path = "../crates/nvi"}
nvi-macros = { path = "../crates/nvi-macros"}
tokio = {version="1.36.0", features=["full"]}
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

serde-rmpv = "0.0.1"
tracing = "0.1.40"
async-trait = "0.1.80"
futures-util = "0.3.30"
