[package]
name = "nvi-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.85"
quote = "1.0.36"
structmeta = "0.3.0"
syn = "2.0.66"
thiserror = "1.0.61"

[dev-dependencies]
async-trait = "0.1.80"
nvi = { path = "../nvi" }
pretty_assertions = "1.3.0"
rust-format = { version = "0.3.4", features = ["token_stream"] }
