[package]
name = "nvi-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.85"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.36"
structmeta = "0.3.0"
syn = "2.0.66"
thiserror = "2.0.7"

[dev-dependencies]
async-trait = "0.1.80"
nvi = { path = "../nvi" }
serde-rmpv = { path = "../serde-rmpv" }
pretty_assertions = "1.3.0"
rust-format = { version = "0.3.4", features = ["token_stream"] }
tokio = "1.38.0"
tracing-test = "0.2.5"
tracing = "0.1.40"
