[package]
name = "nvi-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bytes = "1.2.1"
futures = "0.3.25"
log = "0.4.17"
rmpv = "1.0.0"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.22"
tokio = { version = "1.4", features = ["macros", "net", "time"] }
