[package]
name = "nvi-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bytes = "1.2.1"
futures = "0.3.25"
rmpv = "1.3.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }
tracing = "0.1.40"
