[package]
name = "nvi-rpc2"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
rmp = "0.8.14"
rmpv = "1.3.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full", "rt"] }
tracing = "0.1.40"

[dev-dependencies]
lazy_static = "1.5.0"
tempfile = "3.10.1"
tracing-test = "0.2.5"
