[package]
name = "nvi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-rmpv = { path = "../serde-rmpv" }
futures = "0.3.30"
msgpack-rpc = "0.4.2"
rmp = "0.8.14"
rmp-serde = "1.1.2"
rmpv = {version ="1.3.0", features = ["with-serde"]}
serde = "1.0.203"
serde_derive = "1.0.203"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = {version="1.36.0", features=["full"]}
tokio-util = { version ="0.7.11", features=["io", "io-util"] }
tracing = "0.1.40"
derive_builder = "0.20.0"
serde_with = "3.8.1"
async-trait = "0.1.80"
nix = { version = "0.29.0", features = ["signal"] }
clap = { version = "4.5.6", features = ["derive"] }

[dev-dependencies]
tracing-test = "0.2.4"
