[package]
name = "nvi"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
macro-types = { path = "../macro-types" }
nvi-macros = { path = "../nvi-macros" }
mrpc = { path = "../../../mrpc" }
# mrpc = "0.0.6"

tokio = {workspace=true, features=["full"]}

futures = "0.3.30"
futures-util = "0.3.30"
rmp = "0.8.14"
rmp-serde = "1.1.2"
serde-rmpv = "0.0.1"
rmpv = {version ="1.3.0", features = ["with-serde"]}
serde = "1.0.203"
serde_derive = "1.0.203"
tempfile = "3.10.1"
thiserror = "2.0.7"
tokio-util = { version ="0.7.11", features=["io", "io-util"] }
tracing = "0.1.40"
serde_with = "3.8.1"
async-trait = "0.1.80"
nix = { version = "0.29.0", features = ["signal"] }
clap = { version = "4.5.6", features = ["derive"] }
tracing-subscriber = {version = "0.3.18", features = ["std", "fmt", "env-filter"]}
strum = { version = "0.26.2", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
tracing-log = "0.2.0"
derive_setters = "0.1.6"
colornames = "0.0.6"
textwrap = "0.16.1"
termcolor = "1.4.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tracing-test = "0.2.4"
