[package]
name = "protoc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokio = {workspace=true, features=["full"]}

anyhow = "1.0.86"
clap = { version = "4.5.2", features = ["derive"] }
proc-macro2 = "1.0.84"
quote = "1.0.36"
regex = "1.10.3"
rmp-serde = "1.1.2"
serde = "1.0.203"
serde_derive = "1.0.203"
syn = { version = "2.0.66", features = ["full", "visit-mut"] }
tempfile = "3.10.1"
prettyplease = "0.2.27"
